--- a/style.css
+++ b/style.css
@@ -12,3 +12,18 @@ header {
   border-bottom: 1px solid #ccc;
 }
 
+header nav {
+  float: right;
+}
+
+nav ul {
+  padding: 0;
+  margin: 40px 0 0 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+
