--- a/style.css
+++ b/style.css
@@ -45,4 +45,27 @@ h3#header {
   color: #868e96;
 }
 
+#header a:hover {
+  text-decoration: underline;
+}
 
+main {
+  margin-top: 20px;
+}
+
+div.jumbotron {
+  border-radius: 5px;
+  background-color: #e9ecef;
+  padding: 10px;
+  text-align: center;
+}
+
+.jumbotron h1 {
+  font-size: 60px;
+}
+
+.jumbotron p {
+  font-size: 20px;
+  padding: 0 40px 0 40px;
+  line-height: 40px;
+}
