--- a/style.css
+++ b/style.css
@@ -69,3 +69,21 @@ div.jumbotron {
   padding: 0 40px 0 40px;
   line-height: 40px;
 }
+div.questions {
+  padding: 0 20px 0 20px;
+}
+
+div.questions h4 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+div.questions a.btn {
+  border-radius: 5px;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  text-decoration: none;
+  padding: 18px;
+  font-size: 20px;
+} 
