--- a/style.css
+++ b/style.css
@@ -85,5 +85,17 @@ div.questions a.btn {
   border-color: #007bff;
   text-decoration: none;
   padding: 18px;
-  font-size: 20px;
+  font-size: 20px
 } 
+
+div.questions a.btn:hover {
+  background-color: #0069d9;
+  border-color: #0069d9;
+}
+
+footer {}
+border-top: 1px solid #CCC;
+margin-top: 80px;
+padding-top: 20px;
+color: #CCC;
+}
