--- a/style.css
+++ b/style.css
@@ -86,14 +86,14 @@ div.questions a.btn {
   text-decoration: none;
   padding: 18px;
   font-size: 20px
-} 
+}
 
 div.questions a.btn:hover {
   background-color: #0069d9;
   border-color: #0069d9;
 }
 
-footer {}
+footer {
 border-top: 1px solid #CCC;
 margin-top: 80px;
 padding-top: 20px;
